--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explora las Rutas - Tisaleo</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="navigate.js"></script>
 </head>
 <body>
     <header class="header">
@@ -17,7 +16,7 @@
             <h1>Explora las Rutas Virtuales</h1>
             <p>Sumérgete en recorridos interactivos y descubre la belleza de Tisaleo.</p>
             <div class="buttons">
-                <button class="cta-button" onclick="navigate('rutaA.html')">City Tour</button>
+                <a href="rutaA.html" class="cta-button">City Tour</a>
             </div>
         </div>
     </div>
