--- a/rutaA.html
+++ b/rutaA.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ruta: CityTour Tisaleo</title>
     <link rel="stylesheet" href="./css/recorridos.css" />
-    <script src="navigate.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/panolens@0.12.0/build/panolens.min.js"></script>
   </head>
   <body>
     <!-- Cabecera con el botón de regreso -->
     <div class="header">
-      <button class="back-button" onclick="navigate('index.html')">Regresar al inicio</button>
+      <a href="index.html" class="back-button">Regresar al inicio</a>
     </div>
 
     <!-- Contenedor del visor -->
