--- a/rutaA.html
+++ b/rutaA.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net;">
 
     <link rel="stylesheet" href="./css/recorridos.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/panolens@0.12.0/build/panolens.min.js"></script>
+    <script src="js/libraries/three.min.js"></script>
+    <script src="js/libraries/panolens.min.js"></script>
   </head>
   <body>
     <!-- Cabecera con el botón de regreso -->
